app/src/objects/CheckIn__c.object
<CustomObject>
    <description>CheckIn object for almond extension</description>
    <fields>
        <fullName>CheckIn_Location__c</fullName>
        <label>CheckIn Location</label>
        <required>true</required>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>almond__Learning__c</referenceTo>
        <relationshipLabel>CheckIns</relationshipLabel>
        <relationshipName>CheckIns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Mile_Radius__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Mile Radius</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>CheckIn</label>
    <nameField>
        <displayFormat>CHI-{000000}</displayFormat>
        <label>CheckIn ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CheckIns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>